deployment/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stop-e-data
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-url: 'http://stop-oauth2-proxy.standalone.svc.cluster.local/oauth2/auth'
    nginx.ingress.kubernetes.io/auth-signin: 'https://stop.auth.p.niva.no/oauth2/sign_in'
    nginx.ingress.kubernetes.io/auth-response-headers: 'X-Auth-Request-Email, X-Auth-Request-User, X-Forwarded-Access-Token, X-Auth-Request-Groups, X-Auth-Request-Preferred-Username'
    nginx.ingress.kubernetes.io/affinity: 'cookie'
    nginx.ingress.kubernetes.io/session-cookie-name: 'http-cookie'
    nginx.ingress.kubernetes.io/session-cookie-expires: '172800'
    nginx.ingress.kubernetes.io/session-cookie-max-age: '172800'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '18000'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '18000'
spec:
  ingressClassName: nginx
  tls:
    - secretName: stop-e-data-certificate
      hosts:
        - stop-e-data.p.niva.no
  rules:
  - host: stop-e-data.p.niva.no
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: stop-e-data
            port:
              name: http
